--- a/Neural_Networks/神经网络.ipynb
+++ b/Neural_Networks/神经网络.ipynb
@@ -13,11 +13,11 @@
    "source": [
     "可以使用`torch.nn`包来构建神经网络.\n",
     "\n",
-    "我们以及介绍了`autograd`，`nn`包依赖于`autograd`包来定义模型并对它们求导。一个`nn.Module`包含各个层和一个`forward(input)`方法，该方法返回`output`。\n",
+    "我们已经介绍了`autograd`，`nn`包依赖于`autograd`包来定义模型并对它们求导。一个`nn.Module`包含各个层和一个`forward(input)`方法，该方法返回`output`。\n",
     "\n",
     "例如，下面这个神经网络可以对数字进行分类：\n",
     "\n",
-    "![](assets/mnist.png)\n",
+    "![9dWj1c](https://upiclw.oss-cn-beijing.aliyuncs.com/uPic/9dWj1c.png)\n",
     "\n",
     "这是一个简单的前馈神经网络（feed-forward network）。它接受一个输入，然后将它送入下一层，一层接一层的传递，最后给出输出。\n",
     "\n",
@@ -36,8 +36,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 定义网络"
+    "## 定义网络\n",
+    "\n",
+    "![Rmi0FR](https://upiclw.oss-cn-beijing.aliyuncs.com/uPic/Rmi0FR.png)\n",
+    "\n",
+    "![aPr21W](https://upiclw.oss-cn-beijing.aliyuncs.com/uPic/aPr21W.png)\n",
+    "\n",
+    "\n",
+    "[TensorFlow 美女大神讲的卷积](https://www.youtube.com/watch?v=UzJc283xy34)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "x = torch.randn(3,1,5,4)\n",
+    "print(x)\n",
+    "\n",
+    "conv = torch.nn.Conv2d(1,4,(2,3))\n",
+    "res = conv(x)\n",
+    "\n",
+    "print(res.shape)    # torch.Size([3, 4, 4, 2])\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "输入：x[ batch_size, channels, height_1, width_1 ]\n",
+    "\n",
+    "* batch_size，一个batch中样本的个数 3\n",
+    "* channels，通道数，也就是当前层的深度 1\n",
+    "* height_1， 图片的高 5\n",
+    "* width_1， 图片的宽 4\n",
+    "\n",
+    "卷积操作：Conv2d[ channels, output, height_2, width_2 ]\n",
+    "\n",
+    "* channels，通道数，和上面保持一致，也就是当前层的深度 1\n",
+    "* output ，输出的深度 4【需要4个filter】\n",
+    "* height_2，卷积核的高 2\n",
+    "* width_2，卷积核的宽 3\n",
+    "\n",
+    "输出：res[ batch_size,output, height_3, width_3 ]\n",
+    "\n",
+    "* batch_size,，一个batch中样例的个数，同上 3\n",
+    "* output， 输出的深度 4\n",
+    "* height_3， 卷积结果的高度 4\n",
+    "* width_3，卷积结果的宽度 2\n",
+    "\n",
+    "\n",
+    "![7HjSDS](https://upiclw.oss-cn-beijing.aliyuncs.com/uPic/7HjSDS.png)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
