--- a/What_is_PyTorch/什么是PyTorch.ipynb
+++ b/What_is_PyTorch/什么是PyTorch.ipynb
@@ -4,15 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">完整项目地址：https://github.com/bat67/Deep-Learning-with-PyTorch-A-60-Minute-Blitz-cn ，\n",
-    "嘤嘤嘤求star~，最新版也会首先更新在github上\n",
-    "有误的地方拜托大家指出~"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 什么是PyTorch？"
    ]
   },
@@ -41,6 +32,18 @@
    "source": [
     "### 1.1 张量"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
