--- a/Neural_Networks/神经网络.md
+++ b/Neural_Networks/神经网络.md
@@ -9,7 +9,7 @@
 
 可以使用`torch.nn`包来构建神经网络.
 
-我们以及介绍了`autograd`，`nn`包依赖于`autograd`包来定义模型并对它们求导。一个`nn.Module`包含各个层和一个`forward(input)`方法，该方法返回`output`。
+我们已经介绍了`autograd`，`nn`包依赖于`autograd`包来定义模型并对它们求导。一个`nn.Module`包含各个层和一个`forward(input)`方法，该方法返回`output`。
 
 例如，下面这个神经网络可以对数字进行分类：
 
